syntax = "proto3";

option csharp_namespace = "GrpcEmployeeService";

package employee;

service EmployeeService {
	rpc GetAll (Empty) returns (EmployeeList) {}
	rpc Get (EmployeeId) returns (Employee) {}
	rpc Insert (Employee) returns (Empty) {}
	rpc Update (Employee) returns (Employee) {}
	rpc Delete (EmployeeId) returns (Empty) {}
}

message Empty {}

message Employee {
	int32 employeeId = 1;
	string userName = 2;
	string position = 3;
	string birthdate = 4;
}

message EmployeeList {
	repeated Employee item = 1;
}

message EmployeeId {
	int32 id = 1;
}
